# SQL_2_GGM

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE.md  NOTICE.md  README.md  TODO.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
SQL_2_GGM/: __init__.py
dev_sql_server/: README.md  get_connection.py  preprocess_sql.py
docker/: entrypoint.sh
ggm/: BRON.md  CodegeneratieTemplates.xml  README.md
ggm_dev_server/: README.md  get_connection.py  preprocess_sql.py
ggm_selectie/: README.md  Sociaal_Domein_Beschikking_en_Voorziening__Domain_Objects_mssql.sql  Sociaal_Domein_Beschikking_en_Voorziening__Domain_Objects_mysql.sql  Sociaal_Domein_Beschikking_en_Voorziening__Domain_Objects_oracle.sql  Sociaal_Domein_Beschikking_en_Voorziening__Domain_Objects_postgres.sql
mapping/: BeschikteVoorziening.sql
odata_to_staging/: .env.example  README.md  config.ini.example  main.py
source_to_staging/: .env.example  .gitignore  README.md  config.ini  config.ini.example  destination_config.ini.example  main.py  source_config.ini.example
sql_to_staging/: .env.example  .gitignore  README.md  config.ini.example  main.py
staging_to_silver/: .env  .env.example  README.md  config.ini.example  main.py
synthetic/: README.md  __init__.py  generate_synthetic_data.py  load_csvs_to_db.py  load_csvs_to_db_direct.py
tests/: .env.example  __init__.py  _parse_demo.py  conftest.py  integration_utils.py  queries_sqlite_simple.py  test_demo_scripts_postgres.py  test_direct_transfer_integration.py  test_direct_transfer_retry.py  test_direct_transfer_streaming_integration.py  test_direct_transfer_type_mapping.py  test_download_parquet.py  test_download_parquet_connectorx.py  test_download_parquet_odata_pagination_no_count.py  test_example_pipeline_postgres.py  test_execute_sql_folder.py  test_execute_sql_folder_schema_quoting.py  test_execute_sql_folder_split_oracle.py  test_identifiers.py  test_init_sql_abort_on_engine_failure.py  test_integration_case_matching_mssql.py  test_integration_case_matching_mssql_lower.py  test_integration_case_matching_mssql_mixed.py  test_integration_case_matching_postgres.py  test_integration_declaratieregel_postgres.py  test_integration_direct_transfer.py  test_integration_direct_transfer_streaming.py  (+35 more)
(+649 files in other folders)
